# framework.security.cert-svc

./: .gitignore  CMakeLists.txt  cert-svc-vcore.pc.in  cert-svc.manifest  cert-svc.pc.in  mapping-profile.sh  project.config
etc/: CMakeLists.txt  cert_svc_create_clean_db.sh  cert_svc_create_clean_store_db.sh  initialize_store_db.sh
include/: cert-service-debug.h  cert-service-process.h  cert-service.h
packaging/: cert-svc.manifest  cert-svc.spec
res/: ca-certificate.crt
srcs/: CMakeLists.txt  cert-service-process.c  cert-service-store.c  cert-service-util.c  cert-service.c
systemd/: cert-server.service  cert-server.socket
tests/: CMakeLists.txt
tests/capi/: CMakeLists.txt  api_tests.cpp
tests/cert-svc/: CMakeLists.txt
tests/pkcs12/: CMakeLists.txt  Maha.pfx  aux_test.cpp  eastest036.pfx  filip.pkcs12  new_test_cases.cpp  pkcs12_test.cpp  test.p12  test_cases.cpp
tests/vcore/: CMakeLists.txt  TestCases.cpp  TestEnv.cpp  TestEnv.h  file_input_mapping.cpp  file_input_mapping.h  vcore_tests.cpp
tests/verify-signature-tpk/: CMakeLists.txt  main.cpp  verify-signature.cpp
vcore/: CMakeLists.txt
vcore/src/: CMakeLists.txt
vcore/src/cert-svc/: ccert.h  cpkcs12.h  cprimitives.h
vcore/src/dpl/core/include/dpl/: mutex.h  scoped_close.h
vcore/src/dpl/core/src/: exception.cpp  mutex.cpp  thread.cpp
vcore/src/dpl/log/include/dpl/log/: vcore_log.h
vcore/src/dpl/test/src/: test_results_collector.cpp  test_runner.cpp  value_separated_policies.cpp
vcore/src/server/src/: cert-server-logic.c  cert-server-main.c
vcore/src/vcore/: Base64.cpp  Base64.h  CRLImpl.cpp  CachedRootCerts.c  CachedRootCerts.h  CertStoreType.h  Certificate.cpp  CertificateCollection.cpp  CertificateCollection.h  CertificateConfigReader.cpp  CertificateLoader.cpp  Certificate_wearable.h  Database.cpp  Database.h  DeveloperModeValidator.cpp  DeveloperModeValidator.h  OCSP.h  OCSPCertMgrUtil.cpp  OCSPImpl.cpp  OCSPImpl.h  OCSPImpl_wearable.h  ReferenceValidator.cpp  SaxReader.cpp  SignatureData.cpp  SignatureData.h  SignatureFinder.cpp  SignatureReader.cpp  SignatureValidator.cpp  SignatureValidator.h  VCore.cpp  ValidatorFactories.cpp  WrtSignatureValidator.cpp  WrtSignatureValidator.h  XmlsecAdapter.cpp  api.cpp  cert-svc-client.c  cert-svc-client.h  exception.cpp  pkcs12.c  pkcs12.h
